--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "bootstrap": "^4.5.3",
     "next": "10.0.3",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "typescript": "^4.1.2"
   }
