--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "js-cookie": "^2.2.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
