--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "typescript": "^4.1.2"
